# Kosmos-2

./: README.md  example.py  pyproject.toml  requirements.txt
kosmos/: __init__.py  model.py  transformer.py
