[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kosmos-2"
version = "0.1.0"
description = "kosmos-2 - Pytorch"
authors = ["Kye Gomez <kye@apac.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kyegomez/kosmos-2"
keywords = ["artificial intelligence", "attention mechanism", "transformers"]
packages = [
    { include = "kosmos" },
    { include = "kosmos/**/*.py" },
]
[tool.poetry.dependencies]
python = "^3.6"
torch = "*"
lion-pytorch = "*"
numpy = "*"
einops = "*"
accelerate = "*"
transformers = "*"
SentencePiece = "*"
datasets = "*"
matplotlib = "*"
deepspeed = "*"
flamingo-pytorch = "*"
zetascale = "*"

[tool.poetry.dev-dependencies]